Update online book with chapters 4 and 5
- Update files to be transferred to website
- Suppress rm error and mkdir if necessary
- Capitalise headers

--- a/tex2html/config/website.yml
+++ b/tex2html/config/website.yml
@@ -16,6 +16,8 @@ chapters:
   - 01_Context
   - 02_EthicalDevelopment
   - 03_GroupFairness
+  - 04_IndividualFairness
+  - 05_InequalityIndices
 
 figureFileTypes:
   - png
