Chapter 5 Edits - Rename chapter: Inequality Indices => Fairness as Utility - Rewrite chapter intro and summary - Add sections and reorganise material more logically - Reframe mapping benefits to luck - Add Observation paragraphs - Add overall fairness conditions to the benefit function table - Maximising the contribution from the between-group component - Improve explanations around what inequality indices do and the generalisation parameter - Add special cases for generalised entropy indices - Move proofs to the appendix - Add lookboxes for important stuff - Update chapter 5 figures (axes labels) and code - Add Further Work section
- CH1: Update chapter summary
- CH3: Talk about group fairness as constraints on utility
- CH3: Weaknesses of group fairness and individual fairness as the remedy
- CH4: Update chapter intro
- CH4: Improve notation for continuity conditions
- CH4: Add optimisation problem
- CH4: Individual fairness orthogonal to utility
- CH4: Add Further Work section

Housekeeping
- Replace Exercises appendix with Proofs and Code
- Finally use a spellchecker for British English that works!
- Change pagecolor to white for pdf
- Single figure size from 0.7 to 0.65 textwidth
- Add references on Consistency vs Deterministic and Aristotle for individual fairness
- Delete planning folder

--- a/tex2html/config/tex2html.yml
+++ b/tex2html/config/tex2html.yml
@@ -48,7 +48,7 @@ appendix_lettermap:
   AIF360: 'A'
   Performance Metrics: 'B'
   Rules of Probability: 'C'
-  Solutions to Exercises: 'D'
+  Proofs and Code: 'D'
 
 labels_pre_post:
 # Labels
