Update book - Look at alpha=1/2 in chapter 5 Python notebook - Update separation and sufficiency figures
Update software
- Tell pandoc not to wrap

--- a/tex2html/config/pandoc.yml
+++ b/tex2html/config/pandoc.yml
@@ -9,6 +9,7 @@ input-file: MBML.tex
 
 template: tex2html/tufte/tufte.html5
 standalone: true
+wrap: none
 
 # metadata values specified here are parsed as literal strings, not markdown:
 metadata:
