Reorganise files, folders, appendices, parts
- Rewrite Notation and Conventions: format with tables
- Move Notation and Conventions to the appendix
- Fix Rules of Probability tables
- Move AIF360 to the end
- Update Utility as Fairness filenames
- Rename 99_BackMatter to 99_References
- Remove unnecessary folders
- Edit Part II: fix typos
- Add Part III placeholder
- Update citation year
- Remove unnecessary output when converting files

--- a/tex2html/config/latex.yml
+++ b/tex2html/config/latex.yml
@@ -14,7 +14,7 @@ chapters:
   - 02_EthicalDevelopment
   - 03_GroupFairness
   - 04_IndividualFairness
-  - 05_InequalityIndices
+  - 05_UtilityFairness
   
 inputs:
   - 98_Appendices
