--- a/tex2html/config/website.yml
+++ b/tex2html/config/website.yml
@@ -18,7 +18,7 @@ figFolders:
   - 02_EthicalDevelopment
   - 03_GroupFairness
   - 04_IndividualFairness
-  - 05_InequalityIndices
+  - 05_UtilityFairness
   - profile
   - code
 
