- Rewrite Ch 3 Summary, include tables of the metrics covered - Make notation more consistent, - Z binary - Don't call everything r and d - Use S for entropy, H is the Heaviside function - Fix Rules of probability table in the appendix - Remove table formatting in tweak.css - Don't use \usepackage{makecell}

--- a/tex2html/config/tex2html.yml
+++ b/tex2html/config/tex2html.yml
@@ -42,6 +42,11 @@ linebreak_lines:
   True Negative (<: 'True Negative<br>(<'
   Accuracy <: 'Accuracy<br><'
   Error Rate <: 'Error Rate<br><'
+  Independence <: 'Independence<br><'
+  Twin test <: 'Twin test<br><'
+  Error <: 'Error<br><'
+  Separation <: 'Separation<br><'
+  Sufficiency <: 'Sufficiency<br><'
 
 #######################################################################################
 appendix_lettermap:
